2011-??-?? v0.0.7
  - Improved error reporting

2011-04-08 v0.0.6
  - Added 'Client#add_permission_to_space'
  - Added 'Client#remove_permission_from_space'

2011-04-08 v0.0.5
  - Added 'Client#add_user_to_group'
  - Added 'Client#member?'
  - Added 'Client#remove_user_from_group'

2011-04-06 v0.0.4
  - Added 'Client#add_group'
  - Added 'Client#get_group'
  - Added 'Client#remove_group'

2011-04-04 v0.0.3
  - Added 'Client#add_user'
  - Added 'Client#get_user'
  - Added 'Client#remove_user'

2011-04-04 v0.0.2
  - Added 'Client#add_space'
  - Added 'Client#get_space'
  - Added 'Client#remove_space'
  - Improved formatting of Confluence exception messages

2011-04-01 v0.0.1
  - Initial prototype release.
