@@ -1,5 +1,6 @@
 2011-??-?? v0.0.7
   - Improved error reporting
+  - Better validation of space keys in 'Confluence::Client#add_space'
 
 2011-04-08 v0.0.6
   - Added 'Client#add_permission_to_space'
